--- a/MedicalAnimal/MedicalAnimal.csproj
+++ b/MedicalAnimal/MedicalAnimal.csproj
@@ -201,6 +201,10 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="ContractCardsWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="OrganizationCardsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -217,6 +221,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Controllers\ContractCardController.cs" />
     <Compile Include="Migrations\202306041355164_InitialCreate.cs" />
     <Compile Include="Migrations\202306041355164_InitialCreate.designer.cs">
       <DependentUpon>202306041355164_InitialCreate.cs</DependentUpon>
@@ -225,7 +230,15 @@
     <Compile Include="Migrations\202306050816173_AddOrganizationCardMigration.designer.cs">
       <DependentUpon>202306050816173_AddOrganizationCardMigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202306050840110_AddContractCardMigration.cs" />
+    <Compile Include="Migrations\202306050840110_AddContractCardMigration.designer.cs">
+      <DependentUpon>202306050840110_AddContractCardMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ContractCard.cs" />
+    <Compile Include="ContractCardsWindow.xaml.cs">
+      <DependentUpon>ContractCardsWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="OrganizationCardsWindow.xaml.cs">
       <DependentUpon>OrganizationCardsWindow.xaml</DependentUpon>
     </Compile>
@@ -268,6 +281,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202306050816173_AddOrganizationCardMigration.resx">
       <DependentUpon>202306050816173_AddOrganizationCardMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306050840110_AddContractCardMigration.resx">
+      <DependentUpon>202306050840110_AddContractCardMigration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
