--- a/MedicalAnimal/packages.config
+++ b/MedicalAnimal/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="EPPlus" version="6.2.4" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net48" />
@@ -27,6 +30,7 @@
   <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options.ConfigurationExtensions" version="7.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net48" />
