--- a/MedicalAnimal/MedicalAnimal.csproj
+++ b/MedicalAnimal/MedicalAnimal.csproj
@@ -216,6 +216,15 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\InspectionCardController.cs" />
+    <Compile Include="Migrations\202306062105076_AddInspectionCard.cs" />
+    <Compile Include="Migrations\202306062105076_AddInspectionCard.designer.cs">
+      <DependentUpon>202306062105076_AddInspectionCard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\InspectionCard.cs" />
+    <Compile Include="Windows\InspectionCardsWindow.xaml.cs">
+      <DependentUpon>InspectionCardsWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="Windows\AuthorizationWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -261,6 +270,10 @@
     <Compile Include="Migrations\202306060117153_UserAdd.designer.cs">
       <DependentUpon>202306060117153_UserAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202306061953102_UserUpdate.cs" />
+    <Compile Include="Migrations\202306061953102_UserUpdate.designer.cs">
+      <DependentUpon>202306061953102_UserUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ContractCard.cs" />
     <Compile Include="Models\User.cs" />
@@ -289,6 +302,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\InspectionCardsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\OrganizationCard.cs" />
@@ -318,6 +335,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202306060117153_UserAdd.resx">
       <DependentUpon>202306060117153_UserAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306061953102_UserUpdate.resx">
+      <DependentUpon>202306061953102_UserUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306062105076_AddInspectionCard.resx">
+      <DependentUpon>202306062105076_AddInspectionCard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
