--- a/MedicalAnimal/MedicalAnimal.csproj
+++ b/MedicalAnimal/MedicalAnimal.csproj
@@ -217,6 +217,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\InspectionCardController.cs" />
+    <Compile Include="DTO\InspectionDTO.cs" />
     <Compile Include="Migrations\202306062105076_AddInspectionCard.cs" />
     <Compile Include="Migrations\202306062105076_AddInspectionCard.designer.cs">
       <DependentUpon>202306062105076_AddInspectionCard.cs</DependentUpon>
